<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SEVCON_HW" Id="{05cdebf4-db48-4a5d-a2ba-68309f94847e}">
    <Declaration><![CDATA[TYPE ST_SEVCON_HW :
STRUCT
	(*Inputs to PLC from Sevcon*)
	StatusWord 				AT %I* : UINT;
	OperationModeDisplay 	AT %I* : SINT;
	ActualVelocity 			AT %I* : UDINT;
	BatteryVoltage			AT %I* : UINT;
	BatteryCurrent			AT %I* : UINT;
	CapacitorVoltage		AT %I* : UINT;
	HeatsinkTemp			AT %I* : USINT;
	AnalogIn1				AT %I* : UINT;
	AnalogIn2				AT %I* : UINT;
	AnalogIn3				AT %I* : UINT;
	AnalogIn4				AT %I* : UINT;
	
	
	(*Outputs to Sevcon from PLC*)
	ControlWord 	AT %Q* : UINT;
	OperationMode 	AT %Q* : SINT;
	TargetVelocity	AT %Q* : UDINT;
	Accel			AT %Q* : UINT;
	Decel			AT %Q* : UINT;
	BrakeOutput		AT %Q* : UINT;
	ContactorOutput	AT %Q* : UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>