<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SEVCON_IN" Id="{e68ff1ae-9c0c-4b8c-a8f3-41b6439b5341}">
    <Declaration><![CDATA[TYPE ST_SEVCON_IN :
STRUCT
	StatusWord 				: UINT;
	OperationModeDisplay 	: SINT;
	ActualVelocity 			: UDINT;
	BatteryVoltage			: UINT;
	BatteryCurrent			: UINT;
	CapacitorVoltage		: UINT;
	HeatsinkTemp			: UINT;
	AnalogIn1				: UINT;
	AnalogIn2				: UINT;
	AnalogIn3				: UINT;
	AnalogIn4				: UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>