<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SEVCON_OUT" Id="{b53e865b-8a54-4195-b81f-73a48de809d8}">
    <Declaration><![CDATA[TYPE ST_SEVCON_OUT :
STRUCT
	ControlWord 	: UINT;
	OperationMode 	: SINT;
	TargetVelocity	: UDINT;
	Accel			: UINT;
	Decel			: UINT;
	BrakeOutput		: UINT;
	ContactorOutput	: UINT;
	PreCharge		: UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>